Update part3.html with solution

--- a/part3.html
+++ b/part3.html
@@ -13,15 +13,15 @@
     <main>
         <div class="card wide">
             <h2>API #1: [TODO]</h2>
-            <h3>URL: [TODO]</h3>
-            <h3>Method: [GET/POST/PUT/...]</h3>
+            <h3>URL: https://accounts.spotify.com/api/token and 'https://accounts.spotify.com/authorize'</h3>
+            <h3>Method: GET then a POST</h3>
             <button id="api-1-btn" type="button">Go Fetch! 🐕</button>
             <pre id="output-1" class="textbox">Output of the request goes here</pre>
         </div>
         <div class="card wide">
-            <h2>API #2: [TODO]</h2>
-            <h3>URL: [TODO]</h3>
-            <h3>Method: [GET/POST/PUT/...]</h3>
+            <h2>API #2: get recommendations from spotify </h2>
+            <h3>URL: https://api.spotify.com/v1/recommendations</h3>
+            <h3>Method: GET</h3>
             <button id="api-2-btn" type="button">Go Fetch! 🐕</button>
             <pre id="output-2" class="textbox">Output of the request goes here</pre>
         </div>
