--- a/part3.html
+++ b/part3.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <div class="card wide">
-            <h2>API #1: [TODO]</h2>
+            <h2>API #1: Authentication and login</h2>
             <h3>URL: https://accounts.spotify.com/api/token and 'https://accounts.spotify.com/authorize'</h3>
             <h3>Method: GET then a POST</h3>
             <button id="api-1-btn" type="button">Go Fetch! 🐕</button>
